<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <Button
            android:id="@+id/button_Ejercicios"
            android:text="@string/button_Ejercicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_Examenes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Examenes" />

        <Button
            android:id="@+id/button_BaseDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_BaseDatos" />

        <Button
            android:id="@+id/button_Graficos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Graficos" />

        <Button
            android:id="@+id/button_Salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Salir" />

</LinearLayout>