<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".graficos.GraficosActivity">

    <Button
        android:id="@+id/buttonGraficos2d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGraficos2d" />

    <Button
        android:id="@+id/buttonGraficosFractal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGraficosFractal" />

    <Button
        android:id="@+id/buttonGraficoBarras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ejercicio Barras" />

    <Button
        android:id="@+id/buttonGraficosSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGraficosSalir" />
</LinearLayout>